--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build
-        run: ./build.sh
+        run: |
+          chmod +x ./build.sh
+          ./build.sh
       
       - name: Get all files in build directory
         run: ls /Users/runner/work/SteakEngine/SteakEngine/build/Release-iphoneos/
