--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,41 @@ set(SOURCES
 )
 
 # cant use add_subdirectory cause lua doesnt use cmake
-file(GLOB LUA_SOURCES
-    libs/lua/*.c
+set(LUA_SOURCES
+    libs/lua/lapi.c
+    libs/lua/lauxlib.c
+    libs/lua/lbaselib.c
+    libs/lua/lcode.c
+    libs/lua/ldblib.c
+    libs/lua/ldebug.c
+    libs/lua/ldo.c
+    libs/lua/ldump.c
+    libs/lua/lfunc.c
+    libs/lua/lgc.c
+    libs/lua/linit.c
+    libs/lua/liolib.c
+    libs/lua/llex.c
+    libs/lua/lmathlib.c
+    libs/lua/lmem.c
+    libs/lua/loadlib.c
+    libs/lua/lobject.c
+    libs/lua/lopcodes.c
+    libs/lua/loslib.c
+    libs/lua/lparser.c
+    libs/lua/lstate.c
+    libs/lua/lstring.c
+    libs/lua/lstrlib.c
+    libs/lua/ltable.c
+    libs/lua/ltablib.c
+    libs/lua/ltm.c
+    libs/lua/lundump.c
+    libs/lua/lvm.c
+    libs/lua/lzio.c
+    libs/lua/lutf8lib.c  
+    libs/lua/lctype.c  
+    libs/lua/lcorolib.c 
 )
+
 message(STATUS "Lua sources: ${LUA_SOURCES}")
 
 add_library(Lua STATIC ${LUA_SOURCES})
