--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,38 @@ set(SOURCES
 
 # cant use add_subdirectory cause lua doesnt use cmake
 file(GLOB LUA_SOURCES
-    lib/lua/*
+    lib/lua/lapi.c
+    lib/lua/lauxlib.c
+    lib/lua/lbaselib.c
+    lib/lua/lcode.c
+    lib/lua/ldblib.c
+    lib/lua/ldebug.c
+    lib/lua/ldo.c
+    lib/lua/ldump.c
+    lib/lua/lfunc.c
+    lib/lua/lgc.c
+    lib/lua/linit.c
+    lib/lua/liolib.c
+    lib/lua/llex.c
+    lib/lua/lmathlib.c
+    lib/lua/lmem.c
+    lib/lua/loadlib.c
+    lib/lua/lobject.c
+    lib/lua/lopcodes.c
+    lib/lua/loslib.c
+    lib/lua/lparser.c
+    lib/lua/lstate.c
+    lib/lua/lstring.c
+    lib/lua/lstrlib.c
+    lib/lua/ltable.c
+    lib/lua/ltablib.c
+    lib/lua/ltm.c
+    lib/lua/lundump.c
+    lib/lua/lvm.c
+    lib/lua/lzio.c
+    lib/lua/lutf8lib.c  
+    lib/lua/lctype.c  
+    lib/lua/lcorolib.c 
 )
 
 add_library(Lua STATIC ${LUA_SOURCES})
