--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-project(SteakEngine VERSION 1.0 LANGUAGES OBJCXX CXX)
+project(SteakEngine VERSION 1.0 LANGUAGES OBJCXX CXX C)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
